<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flipview="http://schemas.android.com/apk/res/com.remote.universalremote.activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper_setting"
    android:orientation="vertical" >
 
    <!-- Device title Bar -->
    <RelativeLayout
        android:id="@id/add_device_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dev_title_height"
        android:background="@drawable/title"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/title_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_device"
            android:textAppearance="@style/DeviceLeftTitleText" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/device_info"
        android:layout_width="@dimen/center_layout_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
            <ImageView
                android:id="@id/device_img"
                android:layout_width="@dimen/imageview_width"
                android:layout_height="@dimen/imageview_height"
                android:src="@drawable/icon_device_tv" />
            <View
                android:id="@id/separator1"
                android:layout_width="@dimen/separator_width"
                android:layout_height="1.0dip"
                android:layout_below="@id/device_img"
                android:background="@color/separator_white" />

            <RelativeLayout
                android:id="@id/name_layout"
                android:layout_width="@dimen/center_layout_width"
                android:layout_height="@dimen/line_height"
                android:layout_below="@id/separator1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/name_label"
                    style="@style/WizardLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/name_label_text" />

                <EditText
                    android:id="@id/name_edit"
                    style="@style/WizardText"
                    android:layout_width="@dimen/textview_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/name_label"
                    android:singleLine="true" />
            </RelativeLayout>

            <View
                android:id="@id/separator2"
                android:layout_width="@dimen/separator_width"
                android:layout_height="1.0dip"
                android:layout_below="@id/name_layout"
                android:background="@color/separator_white" />
            
            <RelativeLayout
                android:id="@id/category_layout"
                android:layout_width="@dimen/center_layout_width"
                android:layout_height="@dimen/line_height"
                android:layout_below="@id/separator2"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/category_label"
                    style="@style/WizardLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_category" />

                <TextView
                    android:id="@id/category_textview"
                    style="@style/WizardLabel"
                    android:layout_width="@dimen/textview_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/category_label"
                    android:text="@string/category_label_text"
                    android:singleLine="true" />
            </RelativeLayout>
            
            <View
                android:id="@id/separator3"
                android:layout_width="@dimen/separator_width"
                android:layout_height="1.0dip"
                android:layout_below="@id/category_layout"
                android:background="@color/separator_white" />
           
              <RelativeLayout
                android:id="@id/manufacturer_layout"
                android:layout_width="@dimen/center_layout_width"
                android:layout_height="@dimen/line_height"
                android:layout_below="@id/separator3"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/manufacturer_label"
                    style="@style/WizardLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_manufacturer" />

                <TextView
                    android:id="@id/manufacturer_textview"
                    style="@style/WizardLabel"
                    android:layout_width="@dimen/textview_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/manufacturer_label"
                    android:text="@string/manufacturer_label_text"
                    android:singleLine="true" />
            </RelativeLayout>
            
              <View
                android:id="@id/separator4"
                android:layout_width="@dimen/separator_width"
                android:layout_height="1.0dip"
                android:layout_below="@id/manufacturer_layout"
                android:background="@color/separator_white" />
              <RelativeLayout
                android:id="@id/model_layout"
                android:layout_width="@dimen/center_layout_width"
                android:layout_height="@dimen/line_height"
                android:layout_below="@id/separator4"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/model_label"
                    style="@style/WizardLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_model" />

                <TextView
                    android:id="@id/model_textview"
                    style="@style/WizardLabel"
                    android:layout_width="@dimen/textview_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/model_label"
                    android:text="@string/model_label_text"
                    android:singleLine="true" />
            </RelativeLayout>
            
              <View
                android:id="@id/separator5"
                android:layout_width="@dimen/separator_width"
                android:layout_height="1.0dip"
                android:layout_below="@id/model_layout"
                android:background="@color/separator_white" />
        
              <Button
                android:id="@id/btn_edit_buttons"
                style="@style/WizardButton"
                android:layout_width="@dimen/testbtn_width"
                android:layout_marginTop="@dimen/line_margin"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator5"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_footer"
                android:text="@string/btn_edit_buttons" />
            
        </RelativeLayout>

    <LinearLayout
        android:id="@id/footer"
        style="@style/WizardFooter"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Button
                android:id="@id/btn_footer_done"
                style="@style/WizardButton"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/next_btn_finish_margin"
                android:background="@drawable/btn_footer"
                android:text="@string/btn_done" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>